--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,21 @@
-# 1. Minimum version of CMake required
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 
-# 2. Project name and language
+set(CMAKE_C_STANDARD 11) # Requires C11 standard
+
 project(MyBrowser VERSION 0.1 LANGUAGES CXX)
 
-# 3. Use Modern C++ (Ladybird uses C++20 or newer!)
+find_package(raylib 3.0 REQUIRED) # Requires at least version 3.0
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# 4. Define your executable (The final program)
-# This says: "Take main.cpp and turn it into a program called 'browser'"
-add_executable(browser main.cpp url.cpp parser.cpp)
+add_executable(${PROJECT_NAME} main.cpp url.cpp parser.cpp)
+
+target_link_libraries(${PROJECT_NAME} raylib)
+
+# Checks if OSX and links appropriate frameworks (only required on MacOS)
+if (APPLE)
+    target_link_libraries(${PROJECT_NAME} "-framework IOKit")
+    target_link_libraries(${PROJECT_NAME} "-framework Cocoa")
+    target_link_libraries(${PROJECT_NAME} "-framework OpenGL")
+endif()
